--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1743,8 +1743,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "5257f8a9-c717-4b78-b253-017e9c994a5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['course', 'section', 'question', 'text'], dtype='object')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "01a55dc8-240d-4c8f-a1f4-400ffddd7e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fields = ['section', 'question', 'text']\n",
+    "transformers = {}\n",
+    "matrices = {}\n",
+    "\n",
+    "for field in fields:\n",
+    "    cv = TfidfVectorizer(stop_words='english', min_df=3)\n",
+    "    X = cv.fit_transform(df[field])\n",
+    "\n",
+    "    transformers[field] = cv\n",
+    "    matrices[field] = X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "bb381300-e472-4f07-ac8c-7ebcd6261d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['001', '01', '02', ..., 'zones', 'zoom', 'zoomcamp'], dtype=object)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformers['text'].get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "ed3da1a0-a0fe-43db-acbb-f78eaad1d935",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<948x2118 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 26463 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrices['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "cc72288c-58ed-47e5-93a1-586140389daf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"I just singned up. Is it too late to join the course?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "076ed1ee-717d-4ba2-bda6-5dadb84dee51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = transformers['text'].transform([query])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "daf42615-fb83-434e-a83f-5c77cf159587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = cosine_similarity(matrices['text'], q).flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "f35c13cc-ae93-4b64-b6f2-8519f1b1175e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3336047 , 0.        , 0.        , 0.1328874 , 0.        ,\n",
+       "       0.        , 0.        , 0.12722114, 0.        , 0.        ])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = (df.course == 'data-engineering-zoomcamp').values\n",
+    "score = score * mask\n",
+    "score[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "7af8de09-054e-4638-af4d-27eb9335187f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "fd76b3b5-092c-4c4d-b06b-c1a2ea73e032",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,  15,  22,  27,  38, 287,   3,   7, 113,  11])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx = np.argsort(-score)[:10]\n",
+    "idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "92c5e093-18a5-4e07-b1ba-825ae8281144",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3336047 , 0.23530268, 0.22668   , 0.1894954 , 0.16484429,\n",
+       "       0.13921764, 0.1328874 , 0.12722114, 0.1207499 , 0.10830554])"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "e1629617-e109-4aeb-a758-42b621665bca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      The purpose of this document is to capture fre...\n",
+       "15     No, late submissions are not allowed. But if t...\n",
+       "22     It's up to you which platform and environment ...\n",
+       "27     You can do most of the course without a cloud....\n",
+       "38     You will have two attempts for a project. If t...\n",
+       "287    This error could result if you are using some ...\n",
+       "3      You don't need it. You're accepted. You can al...\n",
+       "7      Yes, we will keep all the materials after the ...\n",
+       "113    In the join queries, if we mention the column ...\n",
+       "11     No, you can only get a certificate if you fini...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[idx].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "070e9bfc-7364-4746-8a13-5429c1e3793f",
    "metadata": {},
    "outputs": [],
    "source": []
