vector embeddings and bert

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "f35c13cc-ae93-4b64-b6f2-8519f1b1175e",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1729,7 @@
        "       0.        , 0.        , 0.12722114, 0.        , 0.        ])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "7af8de09-054e-4638-af4d-27eb9335187f",
    "metadata": {},
    "outputs": [],
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "fd76b3b5-092c-4c4d-b06b-c1a2ea73e032",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
        "array([  0,  15,  22,  27,  38, 287,   3,   7, 113,  11])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "92c5e093-18a5-4e07-b1ba-825ae8281144",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1785,7 @@
        "       0.13921764, 0.1328874 , 0.12722114, 0.1207499 , 0.10830554])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "e1629617-e109-4aeb-a758-42b621665bca",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1816,7 @@
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "070e9bfc-7364-4746-8a13-5429c1e3793f",
    "metadata": {},
    "outputs": [
@@ -1837,7 +1837,7 @@
        "['section', 'question', 'text']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "980555fc-4603-465a-a46c-84efd5464424",
    "metadata": {},
    "outputs": [],
@@ -1856,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "39a0f583-7c95-493d-b54e-19737c4e6807",
    "metadata": {},
    "outputs": [],
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "id": "ecde3950-b575-4837-974f-7353431e3c66",
    "metadata": {},
    "outputs": [],
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "cb9c27bf-1d0a-4d4d-b26b-ff4f2c7e559e",
    "metadata": {},
    "outputs": [],
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "id": "76926c4a-60c0-4547-a3e9-3ed5c01cc9b4",
    "metadata": {},
    "outputs": [],
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "id": "53da7a34-8052-48a1-9041-bb0f94416448",
    "metadata": {
     "scrolled": true
@@ -1959,7 +1959,7 @@
        "  'text': 'It depends on your background and previous experience with modules. It is expected to require about 5 - 15 hours per week. [source1] [source2]\\nYou can also calculate it yourself using this data and then update this answer.'}]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "id": "74ab72b1-47fd-451b-9660-e4df629c4b14",
    "metadata": {},
    "outputs": [],
@@ -2021,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "id": "8fe5e13d-02aa-4f77-862e-70f5b14c8067",
    "metadata": {},
    "outputs": [
@@ -2031,7 +2031,7 @@
        "['section', 'question', 'text']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 43,
    "id": "db06ee90-31d1-4842-829a-662a812eed17",
    "metadata": {},
    "outputs": [],
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "id": "7c3ec354-9382-4fee-94f4-458a5044f019",
    "metadata": {},
    "outputs": [],
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "id": "ecde6ac7-ce80-4b07-b079-55e822f399f7",
    "metadata": {},
    "outputs": [
@@ -2072,7 +2072,7 @@
        "'I just singned up. Is it too late to join the course?'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 46,
    "id": "09895ca8-6a96-4e34-90fe-de6a1b117681",
    "metadata": {},
    "outputs": [
@@ -2112,7 +2112,7 @@
        "  'course': 'data-engineering-zoomcamp'}]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "id": "da26fadb-2e59-451b-86f8-09d5c0547fc4",
    "metadata": {},
    "outputs": [],
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 49,
    "id": "cf7a1601-cdae-4299-b3ad-5fa73964b806",
    "metadata": {},
    "outputs": [],
@@ -2149,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "id": "22c13291-b493-480e-9e10-256eedb9c1d1",
    "metadata": {},
    "outputs": [],
@@ -2160,20 +2160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "id": "69b68353-1296-43e4-8501-955010f0fc87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.08800117, -0.07512738,  0.10010197,  0.05179075,  0.05151244,\n",
-       "       -0.05659947,  0.02083914,  0.03911667, -0.20330723,  0.33146661,\n",
-       "        0.00626884,  0.08286582, -0.12718796,  0.08835289, -0.02460761,\n",
-       "        0.03826648])"
+       "array([ 0.08800419, -0.07512153,  0.10092401,  0.05127205,  0.05138965,\n",
+       "       -0.05951887,  0.02004213,  0.0607822 , -0.20294215,  0.33437825,\n",
+       "        0.03862638, -0.08756796, -0.13102394, -0.02912721,  0.03607929,\n",
+       "        0.03620086])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2184,11 +2184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 53,
    "id": "2600579f-a557-4dde-bc3e-b24afc526ad2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "query = 'I just singned up. Is it too late to join the course?'\n",
+    "\n",
     "Q = cv.transform([query])\n",
     "Q_emb = svd.transform(Q)"
    ]
@@ -2384,8 +2386,293 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "03778f26-e16a-4879-897e-7e15797fc364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import BertModel, BertTokenizer\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "model = BertModel.from_pretrained(\"bert-base-uncased\")\n",
+    "model.eval()  # Set the model to evaluation mode if not training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "c7f95191-3b91-4137-ad6c-d6d22c03afa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = [\n",
+    "    \"Yes, we will keep all the materials after the course finishes.\",\n",
+    "    \"You can follow the course at your own pace after it finishes\"\n",
+    "]\n",
+    "encoded_input = tokenizer(texts, padding=True, truncation=True, return_tensors='pt')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0c51bc5b-3908-42dc-88cc-c07b33a6ddc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[  101,  2748,  1010,  2057,  2097,  2562,  2035,  1996,  4475,  2044,\n",
+       "          1996,  2607, 12321,  1012,   102],\n",
+       "        [  101,  2017,  2064,  3582,  1996,  2607,  2012,  2115,  2219,  6393,\n",
+       "          2044,  2009, 12321,   102,     0]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0]])}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "37cbdc75-0916-4360-b1a7-c8d03142398f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():  # Disable gradient calculation for inference\n",
+    "    outputs = model(**encoded_input)\n",
+    "    hidden_states = outputs.last_hidden_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "2e0c208b-d1a6-48d2-9080-130dd2f37f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 15, 768])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hidden_states.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "47fc911c-5ed7-4a97-86bd-b4bc2e311214",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 768])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_embeddings = hidden_states.mean(dim=1)\n",
+    "sentence_embeddings.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "3dbe88f8-d39f-4b22-8f17-4d911c14e185",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.35999233, -0.16072303,  0.35452363, ...,  0.04289245,\n",
+       "         0.03482292, -0.03822247],\n",
+       "       [ 0.17849916, -0.500025  ,  0.25277564, ..., -0.11413109,\n",
+       "        -0.3360847 ,  0.4109514 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_embeddings.numpy()\n",
+    "\n",
+    "# note that if use a GPU, first you need to move your tensors to CPU\n",
+    "# sentence_embeddings_cpu = sentence_embeddings.cpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "032e6145-bf8d-4ccf-a592-0bf82c5822f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_batches(seq, n):\n",
+    "    result = []\n",
+    "    for i in range(0, len(seq), n):\n",
+    "        batch = seq[i:i+n]\n",
+    "        result.append(batch)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "4d013583-f000-4c1c-88e4-b05dc5f91504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "57853a2c-2d45-460d-b929-6f6b564ed55b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_embeddings(texts, batch_size=8):\n",
+    "    text_batches = make_batches(texts, 8)\n",
+    "    \n",
+    "    all_embeddings = []\n",
+    "    \n",
+    "    for batch in tqdm(text_batches):\n",
+    "        encoded_input = tokenizer(batch, padding=True, truncation=True, return_tensors='pt')\n",
+    "    \n",
+    "        with torch.no_grad():\n",
+    "            outputs = model(**encoded_input)\n",
+    "            hidden_states = outputs.last_hidden_state\n",
+    "            \n",
+    "            batch_embeddings = hidden_states.mean(dim=1)\n",
+    "            batch_embeddings_np = batch_embeddings.cpu().numpy()\n",
+    "            all_embeddings.append(batch_embeddings_np)\n",
+    "    \n",
+    "    final_embeddings = np.vstack(all_embeddings)\n",
+    "    return final_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "ba794951-7869-407c-a790-ae75419ca294",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "71b79a56-3361-401b-a734-34088dee1833",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e4eed449-dcb9-4c9a-a755-2e4de5b33a19",
+   "id": "20357dc1-3fd1-4b0e-a476-88ce433e347a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing embeddings for section...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9ca8a72092a49ec87819b0b3290eb59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/119 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing embeddings for question...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cebee722915a480bb9ad74495d324619",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/119 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# fields = ['section', 'question', 'text']\n",
+    "\n",
+    "for f in fields:\n",
+    "    print(f'computing embeddings for {f}...')\n",
+    "    embeddings[f] = compute_embeddings(df[f].tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e30cf0c0-0522-411c-8e6f-3368aafd84e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3fbe18-b993-4d03-890f-0a9f37ad11d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('embeddings.bin', 'wb') as f_out:\n",
+    "    pickle.dump(embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fe22344-e0f9-40c4-8d51-9e88c79417af",
    "metadata": {},
    "outputs": [],
    "source": []
