Spelling changes. Added missing end markdown on an escape block.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1615,8 +1615,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5257f8a9-c717-4b78-b253-017e9c994a5d",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1631,13 +1629,15 @@
    ],
    "source": [
     "df.columns"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2e77c501b449eb96"
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "01a55dc8-240d-4c8f-a1f4-400ffddd7e80",
-   "metadata": {},
    "outputs": [],
    "source": [
     "fields = ['section', 'question', 'text']\n",
@@ -1650,13 +1650,15 @@
     "\n",
     "    transformers[field] = cv\n",
     "    matrices[field] = X"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4a1a0cbe2543cd99"
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bb381300-e472-4f07-ac8c-7ebcd6261d7b",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1671,13 +1673,15 @@
    ],
    "source": [
     "transformers['text'].get_feature_names_out()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e2f74df93ee2e49c"
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ed3da1a0-a0fe-43db-acbb-f78eaad1d935",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1693,28 +1697,30 @@
    ],
    "source": [
     "matrices['text']"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c03aea39445ae9e8"
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "cc72288c-58ed-47e5-93a1-586140389daf",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": [
-    "query = \"I just singned up. Is it too late to join the course?\""
-   ]
+   "execution_count": null,
+   "source": "query = \"I just singned up. Is it too late to join the course?\"",
+   "id": "767dd06e91817dcc"
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "076ed1ee-717d-4ba2-bda6-5dadb84dee51",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "q = transformers['text'].transform([query])\n",
     "score = cosine_similarity(matrices['text'], q).flatten()"
-   ]
+   ],
+   "id": "7e48c3a96d93e583"
   },
   {
    "cell_type": "code",
@@ -1860,9 +1866,7 @@
    "id": "39a0f583-7c95-493d-b54e-19737c4e6807",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "query = \"I just singned up. Is it too late to join the course?\""
-   ]
+   "source": "query = \"I just signed up. Is it too late to join the course?\""
   },
   {
    "cell_type": "code",
@@ -2119,7 +2123,7 @@
    ],
    "source": [
     "index.search(\n",
-    "    query='I just singned up. Is it too late to join the course?',\n",
+    "    query='I just signed up. Is it too late to join the course?',\n",
     "    n_results=5,\n",
     "    boost={'question': 3.0},\n",
     "    filters={'course': 'data-engineering-zoomcamp'}\n",
@@ -2189,7 +2193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = 'I just singned up. Is it too late to join the course?'\n",
+    "query = 'I just signed up. Is it too late to join the course?'\n",
     "\n",
     "Q = cv.transform([query])\n",
     "Q_emb = svd.transform(Q)"
