fix: add missing file argument to pickle.dump when saving embeddings

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2670,7 +2670,7 @@
    "outputs": [],
    "source": [
     "with open('embeddings.bin', 'wb') as f_out:\n",
-    "    pickle.dump(embeddings)"
+    "    pickle.dump(embeddings, f_out)"
    ]
   },
   {
